# DeepChatAI

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  init.sql
backend/: .dockerignore  Dockerfile  __main__.py  pyproject.toml
backend/app/: __main__.py
backend/src/: __main__.py  main.py
backend/src/core/: .env  config.py  database.py  security.py
backend/src/models/: __init__.py  chat.py  message.py  user.py
backend/src/prompts/: first.md
backend/src/routers/: __init__.py  auth.py  chat.py  user.py  websocket.py
backend/src/schemas/: chat.py
backend/src/services/: chat.py  dependencies.py  websocket_chat.py
backend/src/utils/: agent.py  document.py  vector_search.py  vector_store.py
frontend/: .dockerignore  AuthContext.tsx  ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx  Dockerfile  LoginPage.tsx  button.tsx  index.css  index.html  index.tsx  main.tsx  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/components/: BreathingExercise.tsx  ChatActions.tsx  MoodTracker.tsx
frontend/components/ui/: button.tsx
frontend/lib/: api.ts  websocket.ts
